# android_opengl

app/: build.gradle
app/src/androidTest/java/com/example/myfirstgame/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NativeRenderer.cpp  NativeRenderer.h  native-lib.cpp
app/src/main/cpp/engine/include/: cube_renderer.h  engine_utils.h  flat_renderer.h  native_renderer.h
app/src/main/cpp/engine/src/: cube_renderer.cpp  flat_renderer.cpp  native_renderer.cpp
app/src/main/cpp/jni_wrapper/include/: jni_resource_reader.h  logger.h  obj_loader.h
app/src/main/java/com/example/myfirstgame/: GLESView.kt  MainActivity.kt  NativeRenderer.kt
app/src/main/java/com/example/rubikcube/: GLESView.kt  MainActivity.kt  NativeRenderer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/myfirstgame/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
